Assets/Plugins/core_expt.h

// Windows: 0=, 1=NT, 2=2000, 3=XP

/************ SYSTEM SETUP *************/

/*! @ingroup init_eyelink
	Initializes the EyeLink library, and opens a connection to the EyeLink tracker.

 	@remarks By setting \c &lt;mode&gt; to be \c 1, the connection can be simulated for debugging
 				purposes.  Only timing operations and simple tests should be done in simulation
 				mode, and the Windows TCP/IP system must be installed.  This function is
 				intended for networks where a single tracker is connected to the network.
 	@param mode Mode of connection:
 					\arg \c 0, opens a connection with the eye tracker;
 					\arg \c 1, will create a dummy connection for simulation;
 					\arg \c -1, initializes the DLL but does not open a connection.
	@return \c 0 if success, else error code

	\b Example:
	<pre>
	\code
	// This program illustrates the use of open_eyelink_connection()

	#include <eyelink.h>

	// Sets the EyeLink host address, if tracker IP address is different
	// from the default "100.1.1.1"
	if (set_eyelink_address("100.1.1.7"))
	    return -1;

	//Initializes EyeLink library, and opens connection to the tracker
	if(open_eyelink_connection(0))
	    return -1;

	...
	// Code for the setup, recording, and cleanups
	close_eyelink_connection();      // disconnect from tracker
	\endcode
	</pre>

	\sa \c close_eyelink_connection(), \c close_eyelink_system(), \c eyelink_broadcast_open(),
		\c eyelink_dummy_open(), \c eyelink_open() and \c eyelink_open_node()
 */
INT16 ELCALLTYPE open_eyelink_connection(INT16 mode);
/*! @ingroup init_eyelink
	Closes any connection to the eye tracker, and closes the link.

 	@remarks NEW (v2.1):  Broadcast connections can be closed, but not to affect the eye tracker. If
 				a non-broadcast (primary) connection is closed, all broadcast connections to the
 				tracker are also closed.

	\b Example: See \c open_eyelink_connection()

	\sa \c open_eyelink_connection() and \c eyelink_close()
 */
void ELCALLTYPE close_eyelink_connection(void);
/*!
@}
*/


/*******************************************************************************
 * Start recording with data types requested                                   *
 * Check that all requested link data is arriving                              *
 * return 0 if OK, else trial exit code                                        *
 *******************************************************************************/
/*! @ingroup recording
	Starts the EyeLink tracker recording, sets up link for data reception if enabled.

 	@remarks Recording may take 10 to 30 milliseconds to begin from this command.  The function
 				also waits until at least one of all requested link data types have been received.
 				If the return value is not zero, return the result as the trial result code.
 	@param file_samples If \c 1, writes samples to EDF file.  If \c 0, disables sample recording.
	@param file_events If \c 1, writes events to EDF file.  If \c 0, disables event recording.
	@param link_samples If \c 1, sends samples through link.  If \c 0, disables link sample access.
	@param link_events If \c 1, sends events through link.  If \c 0, disables link event access.
	@return \c 0 if successful, else trial return code.

	\b Example:
	<pre>
	\code
	// This program illustrates the use of start_recording(), stop_recording(), checking_recording(),
	// and check_record_exit()

	#include <eyelink.h>

	// Starts data recording to EDF file
	// Records samples and events to EDF file only in this example
	// Returns error code if failed
	error = start_recording(1,1,0,0);
	if(error != 0)  return error;

	// Sets up for realtime execution
	begin_realtime_mode(100);

	...
	// Display drawing code here

	// Trial loop
	while(1)
	{
	    // Checks if recording aborted
	    if((error=check_recording())!=0) return error;
	    ...
	    // Other code for display updates, timing, key or button
	    // response handling
	}

	// Ensures we release realtime lock
	end_realtime_mode();
	// Records additional 100 msec of data
	pump_delay(100);
	// halt recording, return when tracker finished mode switch
	stop_recording();

	while(getkey());          // dump any accumulated key presses

	// Call this at the end of the trial, to handle special conditions
	return check_record_exit();
	\endcode
	</pre>

	\sa \c check_record_exit(), \c check_recording(), \c eyelink_data_start() and \c stop_recording()
 */
INT16 ELCALLTYPE start_recording(INT16 file_samples, INT16 file_events,
                         INT16 link_samples, INT16 link_events);
/*******************************************************************************
 * halt recording, return when tracker finished mode switch
 *******************************************************************************/
/*! @ingroup recording
	Stops recording, resets EyeLink data mode.

 	@remarks Call 50 to 100 msec after an event occurs that ends the trial.  This function
 				waits for mode switch before returning.

	\b Example: See \c start_recording()

	\sa \c eyelink_data_stop(), \c set_offline_mode() and \c start_recording()
 */
void ELCALLTYPE stop_recording(void);
/*******************************************************************************
 * Starts tracker into Setup Menu.                                             *
 * From this the operator can do camera setup, calibrations, etc.              *
 * Pressing ESC on the tracker exits.                                          *
 * Leaving the setup menu on the tracker (ESC) key) also exits.                *
 * RETURNS: 0 if OK, 27 if aborted, TERMINATE_KEY if pressed                   *
 *******************************************************************************/
/*! @ingroup setup_eyelink
	Switches the EyeLink tracker to the Setup menu, from which camera setup, calibration,
	validation, drift correction, and configuration may be performed. Pressing the 'ESC' key on
	the tracker keyboard will exit the Setup menu and return from this function.  Calling
	\c exit_calibration() from an event handler will cause any call to \c do_tracker_setup() in
	progress to return immediately.

	@return Always \c 0.

	\b Example:
	<pre>
	\code
	// This program shows an example of using the do_tracker_setup()
	#include <eyelink.h>

	// Colors used for drawing calibration target and background
	COLORREF target_foreground_color = RGB(0,0,0);
	COLORREF target_background_color = RGB(255,255,255);
	int i = SCRWIDTH/60;     // Selects best size for calibration target
	int j = SCRWIDTH/300;    // Selects size for focal spot in target
	if(j < 2) j = 2;

	// Sets diameter of target and of hole in middle of target
	set_target_size(i, j);

	// Sets target color and display background color
	set_calibration_colors(target_foreground_color, target_background_color);

	// Sets sounds for Setup menu (calibration, validation)
	set_cal_sounds("", "", "");
	// Sets sounds for drift correction
	set_dcorr_sounds("", "off", "off");

	// Performs camera setup, calibration, validation, etc.
	do_tracker_setup();

	...
	// Code for running the trials
	\endcode
	</pre>

	\sa \c do_drift_correct(), \c set_cal_sounds(), \c set_calibration_colors() and \c set_target_size()
 */
INT16 ELCALLTYPE do_tracker_setup(void);
/*******************************************************************
 * exact same as receive_data_file. except the feedback parameters can be used
 * for showing what is the full size of the edf file and howmuch is received so far.
 * this function is currently used internally only.
 *******************************************************************/
/*! @ingroup datafile
	This receives a data file from the EyeLink tracker PC.
	Exact same as \c receive_data_file(). except the feedback parameters can be used
	for showing what is the full size of the edf file and how much is received so far.
	This function is currently used internally only.

	@param[in] src Name of eye tracker file (including extension).  If "" (empty string), asks
				tracker for name of last opened data file.
	@param[in] dest Name of local file to write to (including extension).  This must be a
			   valid file name or directory name.
	@param[in] dest_is_path If nonzero, appends file name to &lt;dest&gt; as a directory path.
	@param[in] progress A function pointer, that takes size and received size integers.
			   This allows, one to display progress bar on edf file transfer.
	@return \c 0 if file transfer was cancelled.\n
			Size of file if successful.\n
			\c -1 if file size is negative.\n
			\c -2 if cannot create local file.
			\c -3 if file transfer was cancelled
			\c -4 if file transfer was aborted
			\c -5 if error occurred while writing file
			\c -6 if link was terminated


	\sa \c receive_data_file, \c close_data_file() and \c open_data_file()
 */
INT32 ELCALLTYPE receive_data_file_feedback(const char *src, const char *dest, INT16 dest_is_path,
                  void(ELCALLBACK *progress)(unsigned int size,unsigned int received));
INT32 ELCALLTYPE receive_data_file_feedback_v2(char *src, char *dest, INT16 dest_is_path,
                                            void(ELCALLBACK *progress)(unsigned int size,unsigned int received));
/*! @ingroup datafile
	This function sends a file to the Eyelink tracker. Source destination file name
	should be given. Using this function, an image or video can be uploaded from the display
	PC to the host Tracker PC. The image can later be used as a Gaze Cursor Backdrop via a call
	to eyelink_send_command().

 	@param src           Name of local file (including extension).
	@param dest          Name of eye tracker file to write to (including extension).
	@param dest_is_path  If nonzero, appends file name to &lt;dest&gt; as a directory path.
	@param progress      A function pointer, that takes size and received size integers.
			   This allows, one to display progress bar on file transfer.

 	@return Returns \c size of file if transferred file size is equal to the real file size. \n
					\c -1 if fail to connect tracker ftpd.\n
					\c -2 if fail to open file.\n
					\c -4 if fail to receive reply from tracker ftpd. \n
					\c -5 if transferred file size is unequal to the real file size.
 */

INT32 ELCALLTYPE send_data_file_feedback(char *src, char *dest, INT16 dest_is_path,
                                            void(ELCALLBACK *progress)(unsigned int size,unsigned int received));
INT32 ELCALLTYPE send_data_file_mem(char *src, char *fname, int file_size,
                                    void(ELCALLBACK *progress)(unsigned int size,unsigned int received));
/*******************************************************************************
 * EDF OPEN, CLOSE
 *******************************************************************************/

/*******************************************************************************
 * These functions were added as future revisions of EyeLink
 * might require significant time to open and close EDF files
 * Opens EDF file on tracker hard disk
 *******************************************************************************/
/*! @ingroup datafile
	Opens an EDF file, closes any existing file.

 	@param name Name of data file,which can only use letters(uppercase and lowercase),
		        numbers(0-9),and underscore(appears from 2nd place). The base file name
		        should not exceed 8 characters; the name extension can only be .edf.
 	@return Returns \c 0 if success, else error code.
 */
INT16 ELCALLTYPE open_data_file(char *name);
/*******************************************************************************
 * Closes EDF file on tracker hard disk
 *******************************************************************************/
/*! @ingroup datafile
	Closes any open EDF file.

	@return Returns \c 0 if success, else error code.
 */
INT16 ELCALLTYPE close_data_file(void);