Assets/Plugins/eyelink.h

/*! @ingroup init_eyelink
	Attempts to open a link connection to the EyeLink tracker.  Simple connect to single Eyelink tracker.
	Equivalent to \c eyelink_open_node(broadcast_address, 0).

	@remarks The tracker address can be set by calling the function \c set_eyelink_address().  If this
				address was "255.255.255.255" the call to \c eyelink_open() will "broadcast" a request
				to any tracker, however this may fail if multiple Ethernet cards are installed.
				For the broadcast option to work use EyeLink I v2.1 or higher, EyeLink II v1.1 or higher.
				Before using this command, call either \c open_eyelink_connection(-1) or
				\c open_eyelink_system () to prepare the link for use.

	@return \c 0 if successful.\n
			\c LINK_INITIALIZE_FAILED  if link could not be established.\n
			\c CONNECT_TIMEOUT_FAILED  if tracker did not respond.\n
			\c WRONG_LINK_VERSION if the versions of the EyeLink library and tracker are incompatible.\n

	\b Example:
	<pre>
	\code
	// This program illustrates the use of eyelink_open()

	#include <eyelink.h>

	// Initialize the EyeLink DLL
	if(open_eyelink_connection(-1))
	    return -1;

	// Set the address of the tracker
	set_eyelink_address("100.1.1.1");

	// connect to single Eyelink tracker
	if (eyelink_open())
	    return -1;
	\endcode
	</pre>
	\sa \c eyelink_broadcast_open(), \c eyelink_close(), \c eyelink_dummy_open(), \c eyelink_open_node(),
		\c open_eyelink_connection(), \c open_eyelink_system() and \c set_eyelink_address()
 */
INT16 ELCALLTYPE eyelink_open(void);
/* used for debugging: all functions return a valid code */
/* does not connect to tracker */
/*! @ingroup init_eyelink
	Sets the EyeLink library to simulate an eyetracker connection.  Functions will return
	plausible values, but no data.

	@remarks The function \c eyelink_is_connected() will return \c -1 to indicate a simulated connection.
	@return Always returns \c 0.

	\b Example:
	<pre>
	\code
	// This program illustrates the use of eyelink_dummy_open

	#include <eyelink.h>

	// Initialize the EyeLink DLL; otherwise the application will crash
	// when using the eyelink_dummy_open()function!
	if(open_eyelink_connection(-1))
	    return -1;

	// Opens a "dummy" connection for debugging the application
	eyelink_dummy_open();
	\endcode
	</pre>
	\sa \c eyelink_broadcast_open(), \c eyelink_open() and \c eyelink_open_node()
 */
INT16 ELCALLTYPE eyelink_dummy_open(void);
/*! @ingroup init_eyelink
	Checks whether the connection to the tracker is alive.

	@remarks Call this routine during loops and wherever the experiment might lock up if
				the tracker is shut down.  Exit the experiment (by terminating loops and
				returning from all calls) if this returns \c 0.
	@return \c 0 if link closed.\n
			\c -1 if simulating connection.\n
		 	\c 1 for normal connection.\n
 			\c 2 for broadcast connection (NEW for v2.1 and later).\n

	\b Example:
	<pre>
	\code
	// This program illustrates the use of eyelink_is_connected( when performing a pre-trial drift correction

	#include <eyelink.h>

	while(1)
	{
	    // Checks link often so we can exit if tracker stopped
	    if(!eyelink_is_connected())
	        return ABORT_EXPT;

	    // Performs drift correction with target drawn in the center
	    error = do_drift_correct(SCRWIDTH/2, SCRHEIGHT/2, 1, 1);

	    // repeat if ESC was pressed to access Setup menu
	    if(error!=27) break;
	}
	\endcode
	</pre>
	\sa \c eyelink_close() and \c eyelink_open()
 */
INT16 ELCALLTYPE eyelink_is_connected(void);
/********* MESSAGES AND COMMANDS *******/

/* See error return codes above                            */
/* in general, 0 or OK_RESULT means success                */
/* and LINK_TERMINATED_RESULT means data could not be sent */
/* returns: OK_RESULT or LINK_TERMINATED_RESULT            */
/*! @ingroup messaging
	Sends a command to the connected eye tracker.

	@remarks If \c eyelink_send_commnd() is used, the text command will be executed, and a
				result code returned that can be read with \c eyelink_command_result() or
				\c eyelink_wait_for_command_result().

	@param text String command to send.
	@return \c 0 if successful, otherwise link error.

	\b Example:
	<pre>
	\code
	// This program illustrates the use of eyelink_send_command

	#include <eyelink.h>

	UINT32 t;
	int i, j;
	char buf[256];

	// Change the assignment of the button functions so that pressing
	// button 1 will accept target fixation
	i=eyelink_send_command("button_function 1 'accept_target_fixation'");
	// Used to get more information on tracker result
	j = eyelink_last_message(buf);

	if (i == OK_RESULT)
	{
	    eyemsg_printf("Command executed successfully: %s", j?buf:"");
	    break;
	}
	else if (i!=NO_REPLY)
	{
	    eyemsg_printf("Error in executing command: %s", j?buf:"");
	    break;
	}
	
	\endcode
	</pre>
	\b Output:
	<pre>
	\code
	MSG	4608038 Command executed successfully: OK
	\endcode
	</pre>
	\sa \c eyelink_command_result(), \c eyelink_wait_for_command_result() and \c eyelink_timed_command()
 */
INT16 ELCALLTYPE eyelink_send_command(char FARTYPE *text);
/*! @ingroup setup_eyelink
	Returns text associated with result of last calibration, validation, or drift correction.
	This usually specifies errors or other statistics.

	@param msg Buffer to return back the message.
	@return \c 0 if no message since last command sent, else length of string.

	\b Example:
	<pre>
	\code
	// This programs illustrates the use of eyelink_cal_message()
	#include <eyelink.h>
	char message[256];

	// Performs a drift correction
	while(1)
	{   // Check link often so we can exit if tracker stopped
	    if(!eyelink_is_connected()) return ABORT_EXPT;

	    // Performs drift correction with target pre-drawn
	    error = do_drift_correct(SCRWIDTH/2, SCRHEIGHT/2, 1, 1);

	    // repeat if ESC was pressed to access Setup menu
	    if(error!=27) break;
	}
	// Retrieves and writes out the calibration result message
	eyelink_cal_message(message);
	eyemsg_printf(message);
	\endcode
	</pre>
	\b Output:
	<pre>
	\code
	MSG	1896559 DRIFTCORRECT R RIGHT at 320,40  OFFSET 0.11 deg.  -1.0,-4.0 pix.
	MSG	1896560 drift_correction: 0.11 -1.00 -4.00
	\endcode
	</pre>
	\sa \c eyelink_accept_trigger(), \c eyelink_apply_driftcorr() and \c eyelink_cal_result()
 */
INT16 ELCALLTYPE eyelink_cal_message(char FARTYPE *msg);